# hand-vis

./: .gitignore  env.yaml  hand_model.py  main.py  preprocess.py  prim.py  pyproject.toml  readme.md  render.py
src/: config.py
src/preprocess/: close_surface.py  hand_model.py  preprocess.py  safe_load.py
src/render/: bones.py  camera.py  index.py  prim.py  render.py  utils.py
